--- a/css/style.css
+++ b/css/style.css
@@ -2,32 +2,48 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Secular One', sans-serif;
 }
 
 
+/* Regole Header */
+.main-header{
+    text-align: center;
+    margin: 0 auto;
+    font-size: 18px;
+    width: 1600px;
+}
 
+.main-header>h1{
+    color: violet;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* Regole Main */
 .main-card{
    margin-top: 50px;
 }
 
+.container {
+    max-width: 1600px;
+    margin: 0 auto;
+}
 
 img {
     max-width: 100%;
 }
 
-.container {
-    width: 1600px;
-    margin: 0 auto;
-}
 
-.raw{
-    margin: 0 -30px;
-}
-
+/* Regole Card */
 .clearfix::after {
     content: '';
     clear: both;
     display: table;
+}
+
+.raw{
+    margin: 0 -30px;
 }
 
 
@@ -41,25 +57,24 @@ img {
 
 .card{
     background-color: black;   
+    max-height: 95px;
 }
 
 .card-img {
     float: left;
-    width: 150px;
-    height: 150px;
+    width: 127px;
+    height: 95px;
     margin-right: 30px;
 }
 
-.card-title{
-    margin-top: 20px;
-    margin-bottom: 20px;
+.card-title, .card-role, .card-contact {
+    padding-top: 5px;
 }
 
-.card-role{
-
-}
 
 .card-contact{
-    margin-top: 30px;
-
+    text-decoration: none;
+    font-size: 18px;
+    color: blue;
 }
+
