--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,14 @@ img {
     margin-bottom: 30px;
     padding: 0 30px;
     color: white;
+ 
 } 
 
 .card{
     background-color: black;   
+    box-shadow: 0px 0px 10px 0px rgb(58, 58, 58);
     max-height: 95px;
+
 }
 
 .card-img {
