--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     width: 1600px;
 }
 
-.main-header>h1{
+h1:first-of-type{
     color: violet;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -52,32 +52,34 @@ img {
     width: calc(100% / 3);
     margin-bottom: 30px;
     padding: 0 30px;
-    color: white;
- 
+
 } 
 
 .card{
     background-color: black;   
-    box-shadow: 0px 0px 10px 0px rgb(58, 58, 58);
+    box-shadow: 0px 0px 20px 1px grey;
     max-height: 95px;
-
+    color: white;
 }
 
 .card-img {
     float: left;
-    width: 127px;
+    width: 169px;
     height: 95px;
     margin-right: 30px;
 }
 
+/* Regole Testo */
 .card-title, .card-role, .card-contact {
-    padding-top: 5px;
+    /* padding-top: 5px; */
+    line-height: 1.7;
 }
+
 
 
 .card-contact{
     text-decoration: none;
-    font-size: 18px;
-    color: blue;
+    font-size: 15px;
+    color: aqua;
 }
 
