--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     text-align: center;
     margin: 0 auto;
     font-size: 18px;
-    width: 1600px;
+    max-width: 1600px;
 }
 
 h1:first-of-type{
@@ -60,6 +60,7 @@ img {
     box-shadow: 0px 0px 20px 1px grey;
     max-height: 95px;
     color: white;
+    overflow: hidden;
 }
 
 .card-img {
